# procurement-app

./: .cfignore  .env.example  .gitignore  CLAUDE.md  LEARNINGS.md  manifest.yml  pyproject.toml  requirements.txt
app/: __main__.py  config.py
app/api/: dependencies.py  router.py
app/api/endpoints/: health.py
app/api/middleware/: cors.py
app/db/: __init__.py  backend.py  connection.py  hana_backend.py  networkx_backend.py
app/db/queries/: graph.py  relational.py
docs/: PROGRESS.md  READING_GUIDE.md
scripts/: deploy_to_cf.sh
tests/: conftest.py
tests/integration/db/: test_hana_backend.py
tests/unit/api/: test_health.py
tests/unit/db/: test_networkx_backend.py  test_queries.py
