[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "procurement-graphrag"
version = "2.0.0"
requires-python = ">=3.13"
description = "GenAI Q&A backend for SAP procurement data"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    # SAP GenAI Hub
    "sap-ai-sdk-gen>=6.1.2",
    # SAP HANA
    "hdbcli>=2.21.0",
    # LangGraph
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    # Security
    "sap-xssec>=4.2.0",
    "PyJWT>=2.9.0",
    "cfenv>=0.5.3",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "networkx>=3.3",
    "pandas>=2.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]
